<resources>
    <string name="app_name">REstaurant</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_active_tables">ActiveTables</string>
    <string name="ServerError">Please check your internet connection</string>
    <string name="please_wait">Please wait</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_custom_view_grid">custom_view_grid</string>
    <string name="table_name">Table Name</string>
    <string name="dishordered">Dish Ordered</string>
    <string name="amount">Amount: </string>
    <string name="order">New Order</string>
    <string name="change">Change Table</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_get_dishies">GetDishies</string>
    <string name="update">Place Order</string>
    <string name="finish">Finish</string>
    <string name="adddish">Add</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dishiesname">Dishies name</string>
    <string name="customername">Customer Name</string>
    <string name="contactno">Contact No.</string>
    <string name="rating">Rating</string>
    <string name="txtrating">Rating</string>
    <string name="feedback">Feedback</string>
    <string name="edtfeedback">Feedback</string>
    <string name="fdok">Ok</string>
    <string name="skip">Skip</string>
    <string name="cancelordr">Cancel Order</string>
    <string name="customermode">Customer Menu</string>
    <string name="title_activity_cust_cuisini_list">CustCuisiniList</string>
    <string name="add">Add</string>
    <string name="title_activity_cust_dishes">CustDishes</string>
    <string name="title_activity_cust_add_dishes_cart">CustAddDishesCart</string>
    <string name="title_activity_cust_cuisine_new">CustCuisineNew</string>
    <string name="one">ONE</string>
    <string name="eight">EIGHT</string>
    <string name="five">FIVE</string>
    <string name="four">FOUR</string>
    <string name="nine">NINE</string>
    <string name="seven">SEVEN</string>
    <string name="six">SIX</string>
    <string name="ten">TEN</string>
    <string name="three">THREE</string>
    <string name="two">TWO</string>

    <string name="autocompletelable">Enter Dishname</string>

</resources>
