<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    
    <EditText
        android:id="@+id/edtcusname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customername"/>
    <EditText
        android:id="@+id/edtphonenum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contactno"
        android:inputType="phone"/>
    <TextView
        android:id="@+id/txtrating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtrating"/>
    <RatingBar
        android:id="@+id/rat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
    android:id="@+id/txtfeedback"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/feedback"/>
    <EditText
        android:id="@+id/edtfeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtfeedback"
        android:lines="@integer/snackbar_text_max_lines"/>
   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/btnok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fdok"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnskip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_weight="1"/>
    </LinearLayout>
-->
</LinearLayout>