<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.reeva.restaurant.custom_view_grid">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color_300"

        android:orientation="vertical"
        android:padding="1dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"

        android:orientation="vertical"
        android:padding="25dp">
    <TextView android:id="@+id/txttblname"
        android:text="@string/table_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:padding="5dp"
        android:textSize="20dp"
        android:background="@color/white"
        android:textColor="@color/main_color_500"/>

        <TextView android:id="@+id/txttotaldish"
            android:text="@string/dishordered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:textSize="17dp"
            android:padding="5dp"
            android:background="@color/white"
            android:textColor="@color/material_green_600"/>


        <TextView android:id="@+id/txttotalamt"
            android:text="@string/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:textSize="17dp"
            android:padding="5dp"
            android:background="@color/white"
            android:textColor="@color/material_red_400"/>


    </LinearLayout>
        </LinearLayout>
</LinearLayout>
